--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
     "@babel/core": "^7.28.0",
     "@babel/preset-env": "^7.28.0",
     "babel-jest": "^30.0.5",
+    "http-server": "^14.1.1",
     "jest": "^30.0.5"
   },
   "scripts": {
+    "start": "http-server ./ -p 3000",
     "test": "jest"
   }
 }
